--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = 'PaySystemPractice'
 include 'membership-service'
 include 'common'
 include 'banking-service'
+include 'money-service'
 
