--- a/banking-service/build.gradle
+++ b/banking-service/build.gradle
@@ -1,57 +1,84 @@
-buildscript {
-    dependencies {
-        classpath "io.spring.gradle:dependency-management-plugin:1.0.11.RELEASE"
-    }
-}
+//buildscript {
+//    dependencies {
+//        classpath "io.spring.gradle:dependency-management-plugin:1.0.11.RELEASE"
+//    }
+//}
+//
+//plugins {
+//    id 'org.springframework.boot' version '2.5.2'
+//    id 'java'
+//    id 'com.palantir.docker' version '0.25.0'
+//}
+//
+//compileJava {
+//    sourceCompatibility = 11
+//    targetCompatibility = 11
+//}
+//
+//apply plugin: 'java'
+//apply plugin: 'java-library'
+//apply plugin: 'org.springframework.boot'
+//apply plugin: 'io.spring.dependency-management'
+//
+//group 'com.paysystem.banking'
+//version '1.0.0'
+//
+//repositories {
+//    mavenCentral()
+//}
+//
+//dependencies {
+//    compileOnly 'org.projectlombok:lombok'
+//    annotationProcessor 'org.projectlombok:lombok'
+//    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+//    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+//    implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+//    testImplementation 'com.tngtech.archunit:archunit:1.0.1'
+//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//
+//    implementation 'org.springframework.boot:spring-boot-starter-validation'
+//    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+//    implementation 'org.springframework.boot:spring-boot-starter-web'
+//    implementation group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
+//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+//    implementation 'org.jetbrains:annotations:23.0.0'
+//    testImplementation 'junit:junit:4.13.1'
+//
+//    implementation project(path: ':common')
+//
+////    runtimeOnly 'com.h2database:h2'
+//    runtimeOnly 'mysql:mysql-connector-java'
+//}
+//
+//test {
+//    useJUnitPlatform()
+//}
 
 plugins {
-    id 'org.springframework.boot' version '2.5.2'
-    id 'java'
     id 'com.palantir.docker' version '0.25.0'
 }
-
-compileJava {
-    sourceCompatibility = 11
-    targetCompatibility = 11
+ext{
+    axonVersion = "4.6.0"
 }
 
-apply plugin: 'java'
-apply plugin: 'java-library'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-
-group 'com.paysystem.banking'
-version '1.0.0'
-
-repositories {
-    mavenCentral()
-}
+group = 'com.paysystem.banking'
+version = '1.0.0'
 
 dependencies {
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
-    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
-    implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
-    testImplementation 'com.tngtech.archunit:archunit:1.0.1'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.jetbrains:annotations:23.0.0'
-    testImplementation 'junit:junit:4.13.1'
-
     implementation project(path: ':common')
 
+    testImplementation 'junit:junit:4.13.1'
 //    runtimeOnly 'com.h2database:h2'
     runtimeOnly 'mysql:mysql-connector-java'
-}
 
-test {
-    useJUnitPlatform()
+//    implementation group: 'org.axonframework', name: 'axon-configuration', version: "$axonVersion"
+//    implementation group: 'org.axonframework', name: 'axon-spring-boot-starter', version: "$axonVersion"
 }
 
 docker {
