--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,7 @@ services:
       - SPRING_JPA_HIBERNATE_DDL_AUTO=update
       - KAFKA_CLUSTERS_BOOTSTRAPSERVERS=kafka:29092
       - LOGGING_TOPIC=paysystem.logging.out.stdout
+      - SERVICE_MEMBERSHIP_URL=http://membership-service:8080
 
   money-service:
     image: payment-system-practice-money-service:1.0.0
@@ -71,6 +72,9 @@ services:
       - SPRING_JPA_HIBERNATE_DDL_AUTO=update
       - KAFKA_CLUSTERS_BOOTSTRAPSERVERS=kafka:29092
       - LOGGING_TOPIC=paysystem.logging.out.stdout
+      - TASK_TOPIC=paysystem.task.topic
+      - TASK_RESULT_TOPIC=paysystem.task.result.topic
+      - SERVICE_MEMBERSHIP_URL=http://membership-service:8080
 
   zookeeper:
     image: 'arm64v8/zookeeper:3.8'
@@ -127,6 +131,20 @@ services:
     environment:
       - KAFKA_CLUSTERS_BOOTSTRAPSERVERS=kafka:29092
       - LOGGING_TOPIC=paysystem.logging.out.stdout
+
+  task-consumer:
+    image: paysystem-pay-task-consumer:1.0.0
+    networks:
+      - paysystem_network
+    restart: always
+    depends_on:
+      - kafka
+      - zookeeper
+    environment:
+      - KAFKA_CLUSTERS_BOOTSTRAPSERVERS=kafka:29092
+      - LOGGING_TOPIC=paysystem.logging.out.stdout
+      - TASK_TOPIC=paysystem.task.topic
+      - TASK_RESULT_TOPIC=paysystem.task.result.topic
 
 
 
