--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,6 +75,7 @@ services:
       - AXON_SERIALIZER_EVENTS=jackson
       - AXON_SERIALIZER_MESSAGES=jackson
       - AXON_SERIALIZER_GENERAL=xstream
+      - SERVICE_BANKING_URL=http://banking-service:8080
 
   money-service:
     image: payment-system-practice-money-service:1.0.0
@@ -100,6 +101,7 @@ services:
       - AXON_SERIALIZER_EVENTS=jackson
       - AXON_SERIALIZER_MESSAGES=jackson
       - AXON_SERIALIZER_GENERAL=xstream
+      - SERVICE_BANKING_URL=http://banking-service:8080
 
   zookeeper:
     image: 'arm64v8/zookeeper:3.8'
